added html for first screen

--- a/source/style/style.scss
+++ b/source/style/style.scss
@@ -2,6 +2,10 @@
 @import 'common/mixins';
 @import 'common/common';
 
+@import 'blocks/logo';
+@import 'blocks/button';
+
+@import 'main';
 
 // @import '';
 
