--- a/source/template/header.html
+++ b/source/template/header.html
@@ -1,9 +1,17 @@
-<header class="page-header">
+<header class="main-header">
     <div class="container">
-        <div class="page-header__inner">
+        <div class="main-header__inner">
 
-            <div class="page-header__logo logo"></div>
-            <nav class="page-header__nav main-nav">
+            <div class="main-header__logo">
+                <div class="logo">
+                    <a href="index.html" class="logo__link">
+                        <img src="../image/logo-light.svg" alt="Snow logo" class="logo__img" width="85">
+                        <img src="../image/logo.svg" alt="Snow logo" class="logo__img logo__img--dark" width="85">
+                    </a>
+                </div>
+            </div>
+
+            <nav class="main-header__nav main-nav">
                 <ul class="main-nav__list">
                     <li class="main-nav__item"><a href="#" class="main-nav__link">about</a></li>
                     <li class="main-nav__item"><a href="#" class="main-nav__link">contact</a></li>
