--- a/source/style/style.css
+++ b/source/style/style.css
@@ -33,4 +33,82 @@ img {
   right: 0;
   z-index: -1;
 }
+
+.logo__img--dark {
+  display: none;
+}
+
+.main-header {
+  position: fixed;
+  z-index: 9;
+  width: 100%;
+}
+
+.main-header__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main-header__logo {
+  margin-right: auto;
+}
+
+.main-nav {
+  padding: 33px 0;
+}
+
+.main-nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+}
+
+.main-nav__item {
+  margin-right: 30px;
+}
+
+.main-nav__link {
+  color: #bfbfbf;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.main {
+  position: relative;
+  height: 100vh;
+  padding-top: 300px;
+  color: #ffffff;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.main__background {
+  background-image: url("../image/main.jpg");
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
+.main__background::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(12, 12, 12, 0.6);
+}
+
+.main__title--italic {
+  font-style: italic;
+}
+
+.main__subtitle {
+  text-transform: uppercase;
+}
 /*# sourceMappingURL=style.css.map */
