--- a/source/style/blocks/_button.scss
+++ b/source/style/blocks/_button.scss
@@ -1,3 +1,14 @@
 .button {
-    
+    min-width: 200px;
+    padding: 18px 25px;
+    color: #ffffff;
+    text-transform: uppercase;
+    text-align: center;
+    background-color: #252525;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in;
+    &:hover {
+        background-color: #444444;
+    }
 }
