--- a/source/style/style.scss
+++ b/source/style/style.scss
@@ -1,6 +1,7 @@
 @import 'common/variables';
 @import 'common/mixins';
 @import 'common/common';
+@import 'common/fonts';
 
 @import 'blocks/logo';
 @import 'blocks/button';
