--- a/source/style/common/_common.scss
+++ b/source/style/common/_common.scss
@@ -35,3 +35,9 @@ img {
     right: 0;
     z-index: -1;
 }
+
+.section-title {
+    margin-bottom: 35px;
+    font-family: 'Playfair Display', serif;
+    font-size: 39px;
+}
