--- a/source/style/style.css
+++ b/source/style/style.css
@@ -34,6 +34,12 @@ img {
   z-index: -1;
 }
 
+.section-title {
+  margin-bottom: 35px;
+  font-family: 'Playfair Display', serif;
+  font-size: 39px;
+}
+
 @font-face {
   font-family: 'Playfair Display';
   src: url("../../fonts/PlayfairDisplay-Regular.woff2") format("woff2"), url("../../fonts/PlayfairDisplay-Regular.woff") format("woff");
@@ -116,6 +122,8 @@ img {
   z-index: 9;
   width: 100%;
   font-family: 'Work Sans', Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .main-header__inner {
@@ -157,6 +165,7 @@ img {
   height: 100vh;
   padding-top: 300px;
   color: #ffffff;
+  font-family: 'Playfair Display', serif;
   text-align: center;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -180,14 +189,35 @@ img {
 
 .main__title {
   margin-bottom: 50px;
+  font-size: 51px;
 }
 
 .main__title--italic {
   display: block;
   font-style: italic;
+  font-weight: normal;
 }
 
 .main__subtitle {
+  display: block;
+  margin-bottom: 17px;
+  font-family: 'Work Sans', Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 2.8px;
   text-transform: uppercase;
+}
+
+.about {
+  padding: 80px 0;
+  text-align: center;
+}
+
+.about__desc {
+  margin-bottom: 20px;
+}
+
+.about__img {
+  display: inline-block;
 }
 /*# sourceMappingURL=style.css.map */
