pointed the right way to resources

--- a/source/style/common/_fonts.scss
+++ b/source/style/common/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Playfair Display';
-    src: url('../../fonts/PlayfairDisplay-Regular.woff2') format('woff2'),
-        url('../../fonts/PlayfairDisplay-Regular.woff') format('woff');
+    src: url('../fonts/PlayfairDisplay-Regular.woff2') format('woff2'),
+        url('../fonts/PlayfairDisplay-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
     font-family: 'Work Sans';
-    src: url('../../fonts/WorkSans-Regular.woff2') format('woff2'),
-        url('../../fonts/WorkSans-Regular.woff') format('woff');
+    src: url('../fonts/WorkSans-Regular.woff2') format('woff2'),
+        url('../fonts/WorkSans-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -18,8 +18,8 @@
 
 @font-face {
     font-family: 'Playfair Display';
-    src: url('../../fonts/PlayfairDisplay-BoldItalic.woff2') format('woff2'),
-        url('../../fonts/PlayfairDisplay-BoldItalic.woff') format('woff');
+    src: url('../fonts/PlayfairDisplay-BoldItalic.woff2') format('woff2'),
+        url('../fonts/PlayfairDisplay-BoldItalic.woff') format('woff');
     font-weight: bold;
     font-style: italic;
     font-display: swap;
@@ -27,8 +27,8 @@
 
 @font-face {
     font-family: 'Playfair Display';
-    src: url('../../fonts/PlayfairDisplay-Bold.woff2') format('woff2'),
-        url('../../fonts/PlayfairDisplay-Bold.woff') format('woff');
+    src: url('../fonts/PlayfairDisplay-Bold.woff2') format('woff2'),
+        url('../fonts/PlayfairDisplay-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -36,8 +36,8 @@
 
 @font-face {
     font-family: 'Playfair Display';
-    src: url('../../fonts/PlayfairDisplay-Italic.woff2') format('woff2'),
-        url('../../fonts/PlayfairDisplay-Italic.woff') format('woff');
+    src: url('../fonts/PlayfairDisplay-Italic.woff2') format('woff2'),
+        url('../fonts/PlayfairDisplay-Italic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
@@ -45,8 +45,8 @@
 
 @font-face {
     font-family: 'Work Sans';
-    src: url('../../fonts/WorkSans-Medium.woff2') format('woff2'),
-        url('../../fonts/WorkSans-Medium.woff') format('woff');
+    src: url('../fonts/WorkSans-Medium.woff2') format('woff2'),
+        url('../fonts/WorkSans-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -54,8 +54,8 @@
 
 @font-face {
     font-family: 'Work Sans';
-    src: url('../../fonts/WorkSans-Bold.woff2') format('woff2'),
-        url('../../fonts/WorkSans-Bold.woff') format('woff');
+    src: url('../fonts/WorkSans-Bold.woff2') format('woff2'),
+        url('../fonts/WorkSans-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
