--- a/source/style/style.css
+++ b/source/style/style.css
@@ -42,7 +42,7 @@ img {
 
 @font-face {
   font-family: 'Playfair Display';
-  src: url("../../fonts/PlayfairDisplay-Regular.woff2") format("woff2"), url("../../fonts/PlayfairDisplay-Regular.woff") format("woff");
+  src: url("../fonts/PlayfairDisplay-Regular.woff2") format("woff2"), url("../fonts/PlayfairDisplay-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -50,7 +50,7 @@ img {
 
 @font-face {
   font-family: 'Work Sans';
-  src: url("../../fonts/WorkSans-Regular.woff2") format("woff2"), url("../../fonts/WorkSans-Regular.woff") format("woff");
+  src: url("../fonts/WorkSans-Regular.woff2") format("woff2"), url("../fonts/WorkSans-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -58,7 +58,7 @@ img {
 
 @font-face {
   font-family: 'Playfair Display';
-  src: url("../../fonts/PlayfairDisplay-BoldItalic.woff2") format("woff2"), url("../../fonts/PlayfairDisplay-BoldItalic.woff") format("woff");
+  src: url("../fonts/PlayfairDisplay-BoldItalic.woff2") format("woff2"), url("../fonts/PlayfairDisplay-BoldItalic.woff") format("woff");
   font-weight: bold;
   font-style: italic;
   font-display: swap;
@@ -66,7 +66,7 @@ img {
 
 @font-face {
   font-family: 'Playfair Display';
-  src: url("../../fonts/PlayfairDisplay-Bold.woff2") format("woff2"), url("../../fonts/PlayfairDisplay-Bold.woff") format("woff");
+  src: url("../fonts/PlayfairDisplay-Bold.woff2") format("woff2"), url("../fonts/PlayfairDisplay-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -74,7 +74,7 @@ img {
 
 @font-face {
   font-family: 'Playfair Display';
-  src: url("../../fonts/PlayfairDisplay-Italic.woff2") format("woff2"), url("../../fonts/PlayfairDisplay-Italic.woff") format("woff");
+  src: url("../fonts/PlayfairDisplay-Italic.woff2") format("woff2"), url("../fonts/PlayfairDisplay-Italic.woff") format("woff");
   font-weight: normal;
   font-style: italic;
   font-display: swap;
@@ -82,7 +82,7 @@ img {
 
 @font-face {
   font-family: 'Work Sans';
-  src: url("../../fonts/WorkSans-Medium.woff2") format("woff2"), url("../../fonts/WorkSans-Medium.woff") format("woff");
+  src: url("../fonts/WorkSans-Medium.woff2") format("woff2"), url("../fonts/WorkSans-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -90,7 +90,7 @@ img {
 
 @font-face {
   font-family: 'Work Sans';
-  src: url("../../fonts/WorkSans-Bold.woff2") format("woff2"), url("../../fonts/WorkSans-Bold.woff") format("woff");
+  src: url("../fonts/WorkSans-Bold.woff2") format("woff2"), url("../fonts/WorkSans-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
