--- a/source/template/header.html
+++ b/source/template/header.html
@@ -5,8 +5,8 @@
             <div class="main-header__logo">
                 <div class="logo">
                     <a href="index.html" class="logo__link">
-                        <img src="../image/logo-light.svg" alt="Snow logo" class="logo__img" width="85">
-                        <img src="../image/logo.svg" alt="Snow logo" class="logo__img logo__img--dark" width="85">
+                        <img src="./image/logo-light.svg" alt="Snow logo" class="logo__img" width="85">
+                        <img src="./image/logo.svg" alt="Snow logo" class="logo__img logo__img--dark" width="85">
                     </a>
                 </div>
             </div>
