--- a/source/style/common/_common.scss
+++ b/source/style/common/_common.scss
@@ -40,4 +40,9 @@ img {
     margin-bottom: 35px;
     font-family: 'Playfair Display', serif;
     font-size: 39px;
+    text-align: center;
+}
+
+.section-subtitle {
+    text-align: center;
 }
