write in projects

--- a/source/style/style.css
+++ b/source/style/style.css
@@ -10,7 +10,8 @@ img {
 
 .page {
   width: 100%;
-  line-height: 1.2;
+  font-family: 'Work Sans', Arial, Helvetica, sans-serif;
+  line-height: 1.65;
 }
 
 .all-wrapper {
@@ -42,6 +43,11 @@ img {
 }
 
 .section-subtitle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 50px;
+  font-size: 15px;
   text-align: center;
 }
 
@@ -224,5 +230,97 @@ img {
 
 .about__img {
   display: inline-block;
+}
+
+.projects__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.projects__item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 33.3333%;
+          flex: 1 0 33.3333%;
+  min-width: 300px;
+}
+
+.project {
+  position: relative;
+  font-family: 'Playfair Display', serif;
+}
+
+.project:hover .project__overlay {
+  opacity: 1;
+}
+
+.project:hover .project__title {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.project:hover .project__subtitle {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.project__img {
+  width: 100%;
+}
+
+.project__overlay {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #ffffff;
+  background-color: rgba(0, 0, 0, 0.85);
+  text-align: center;
+  opacity: 0;
+  -webkit-transition: opacity 0.4s ease-in;
+  transition: opacity 0.4s ease-in;
+  pointer-events: none;
+}
+
+.project__title {
+  margin-bottom: 18px;
+  font-size: 25px;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  opacity: 0;
+  -webkit-transition: all 0.4s ease-in;
+  transition: all 0.4s ease-in;
+  -webkit-transition-delay: 0.2s;
+          transition-delay: 0.2s;
+}
+
+.project__subtitle {
+  font-family: 'Work Sans', Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  opacity: 0;
+  -webkit-transition: all 0.4s ease-in;
+  transition: all 0.4s ease-in;
+  -webkit-transition-delay: 0.3s;
+          transition-delay: 0.3s;
 }
 /*# sourceMappingURL=style.css.map */
