--- a/source/style/common/_common.scss
+++ b/source/style/common/_common.scss
@@ -12,7 +12,8 @@ img {
 
 .page {
     width: 100%;
-    line-height: 1.2;
+    font-family: 'Work Sans', Arial, Helvetica, sans-serif;
+    line-height: 1.65;
 }
 
 
@@ -44,5 +45,8 @@ img {
 }
 
 .section-subtitle {
+    display: flex;
+    margin-bottom: 50px;
+    font-size: 15px;
     text-align: center;
 }
