--- a/source/style/_projects.scss
+++ b/source/style/_projects.scss
@@ -1,5 +1,5 @@
 .projects {
-
+    padding: 80px 0;
 
     &__list {
         display: flex;
@@ -49,6 +49,7 @@
     &__title {
         margin-bottom: 18px;
         font-size: 25px;
+        line-height: 1.1;
         transform: translateY(10px);
         opacity: 0;
         transition: all 0.4s ease-in;
