--- a/source/style/common/_common.scss
+++ b/source/style/common/_common.scss
@@ -41,12 +41,14 @@ img {
     margin-bottom: 35px;
     font-family: 'Playfair Display', serif;
     font-size: 39px;
+    line-height: 1.1;
     text-align: center;
 }
 
 .section-subtitle {
-    display: flex;
+    display: block;
     margin-bottom: 50px;
+    color: #5f5f5f;
     font-size: 15px;
     text-align: center;
 }
