--- a/source/style/style.css
+++ b/source/style/style.css
@@ -39,14 +39,14 @@ img {
   margin-bottom: 35px;
   font-family: 'Playfair Display', serif;
   font-size: 39px;
+  line-height: 1.1;
   text-align: center;
 }
 
 .section-subtitle {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
   margin-bottom: 50px;
+  color: #5f5f5f;
   font-size: 15px;
   text-align: center;
 }
@@ -232,6 +232,10 @@ img {
   display: inline-block;
 }
 
+.projects {
+  padding: 80px 0;
+}
+
 .projects__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -301,6 +305,7 @@ img {
 .project__title {
   margin-bottom: 18px;
   font-size: 25px;
+  line-height: 1.1;
   -webkit-transform: translateY(10px);
           transform: translateY(10px);
   opacity: 0;
