--- a/source/style/style.scss
+++ b/source/style/style.scss
@@ -3,6 +3,9 @@
 @import 'common/common';
 @import 'common/fonts';
 
+@import '../libs/slick/slick';
+@import '../libs/slick/slick-theme';
+
 @import 'blocks/logo';
 @import 'blocks/button';
 
