--- a/source/style/style.css
+++ b/source/style/style.css
@@ -516,15 +516,24 @@ img {
 }
 
 .projects__item {
+  -ms-flex-preferred-size: calc((100% / 12 * 4) - (0px * 2));
+      flex-basis: calc((100% / 12 * 4) - (0px * 2));
+  max-width: calc((100% / 12 * 4) - (0px * 2));
+  margin-right: 0px;
+  margin-left: 0px;
   -webkit-box-flex: 1;
-      -ms-flex: 1 0 33.3333%;
-          flex: 1 0 33.3333%;
-  min-width: 300px;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  min-width: 280px;
 }
 
 .project {
   position: relative;
   font-family: 'Playfair Display', serif;
+  -webkit-transition: -webkit-box-shadow 0.2s ease-in;
+  transition: -webkit-box-shadow 0.2s ease-in;
+  transition: box-shadow 0.2s ease-in;
+  transition: box-shadow 0.2s ease-in, -webkit-box-shadow 0.2s ease-in;
 }
 
 .project:hover .project__overlay {
@@ -598,6 +607,26 @@ img {
   transition: all 0.4s ease-in;
   -webkit-transition-delay: 0.3s;
           transition-delay: 0.3s;
+}
+
+@media screen and (max-width: 1023px) {
+  .projects__item {
+    -ms-flex-preferred-size: calc((100% / 12 * 6) - (0px * 2));
+        flex-basis: calc((100% / 12 * 6) - (0px * 2));
+    max-width: calc((100% / 12 * 6) - (0px * 2));
+    margin-right: 0px;
+    margin-left: 0px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .projects__item {
+    -ms-flex-preferred-size: calc((100% / 12 * 12) - (0px * 2));
+        flex-basis: calc((100% / 12 * 12) - (0px * 2));
+    max-width: calc((100% / 12 * 12) - (0px * 2));
+    margin-right: 0px;
+    margin-left: 0px;
+  }
 }
 
 .reviews {
