added icons, features section style

--- a/source/style/_about.scss
+++ b/source/style/_about.scss
@@ -1,8 +1,11 @@
 .about {
+    
+
     padding: 80px 0;
     text-align: center;
     &__inner {
-
+        max-width: 730px;
+        margin: 0 auto;
     }
     &__title {
         
