--- a/source/libs/slick/_slick-theme.scss
+++ b/source/libs/slick/_slick-theme.scss
@@ -7,16 +7,16 @@
 // "\2192" outputs ascii character "→"
 // "\2022" outputs ascii character "•"
 
-$slick-font-path: "./fonts/" !default;
+$slick-font-path: "../libs/slick/fonts/" !default;
 $slick-font-family: "slick" !default;
-$slick-loader-path: "./" !default;
+$slick-loader-path: "../libs/slick/" !default;
 $slick-arrow-color: white !default;
 $slick-dot-color: #fff !default;
 $slick-dot-color-active: $slick-dot-color !default;
 $slick-prev-character: "\2190" !default;
 $slick-next-character: "\2192" !default;
 $slick-dot-character: "\2022" !default;
-$slick-dot-size: 24px !default;
+$slick-dot-size: 10px !default;
 $slick-opacity-default: 0.75 !default;
 $slick-opacity-on-hover: 1 !default;
 $slick-opacity-not-active: 0.25 !default;
@@ -148,7 +148,7 @@ $slick-opacity-not-active: 0.25 !default;
         display: inline-block;
         height: 20px;
         width: 20px;
-        margin: 0 5px;
+        // margin: 0 5px;
         padding: 0;
         cursor: pointer;
         button {
