--- a/source/libs/slick/_slick-theme.scss
+++ b/source/libs/slick/_slick-theme.scss
@@ -192,3 +192,9 @@ $slick-opacity-not-active: 0.25 !default;
         }
     }
 }
+
+
+
+.blog .slick-dots li button::before {
+    color: #333333;
+}
