--- a/source/style/style.css
+++ b/source/style/style.css
@@ -377,6 +377,10 @@ img {
   opacity: 0.75;
 }
 
+.blog .slick-dots li button::before {
+  color: #333333;
+}
+
 .logo__img--dark {
   display: none;
 }
@@ -799,16 +803,78 @@ img {
   background-color: #fafafa;
 }
 
+.blog__list {
+  padding-bottom: 20px;
+}
+
 .blog-post {
   padding: 0 15px;
+}
+
+.blog-post__img {
+  position: relative;
+  overflow: hidden;
+}
+
+.blog-post__img:hover img {
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
+}
+
+.blog-post__img img {
+  -webkit-transition: -webkit-transform 0.5s ease-in;
+  transition: -webkit-transform 0.5s ease-in;
+  transition: transform 0.5s ease-in;
+  transition: transform 0.5s ease-in, -webkit-transform 0.5s ease-in;
+}
+
+.blog-post__category {
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  display: block;
+  padding: 5px 15px;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: 500;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-color: #252525;
+}
+
+.blog-post__content {
+  padding: 25px 30px;
+  background-color: #ffffff;
+}
+
+.blog-post__title {
+  margin-bottom: 15px;
+  font-family: 'Playfair Display', serif;
+  font-size: 21px;
+  line-height: 1.1;
 }
 
 .blog-post__title-link {
   color: #171717;
   text-decoration: none;
+  -webkit-transition: color 0.2s ease-in;
+  transition: color 0.2s ease-in;
+}
+
+.blog-post__title-link:hover {
+  color: #979797;
+}
+
+.blog-post__date {
+  display: block;
+  margin-bottom: 15px;
+  font-size: 12px;
+  font-weight: 500;
+  text-transform: uppercase;
 }
 
 .blog-post__text {
   color: #5f5f5f;
+  font-size: 15px;
 }
 /*# sourceMappingURL=style.css.map */
