added contacts section

--- a/source/style/_main.scss
+++ b/source/style/_main.scss
@@ -58,6 +58,7 @@
     &__title {
         margin-bottom: 50px;
         font-size: 51px;
+        line-height: 1.18;
     }
     &__title--italic {
         display: block;
