--- a/source/style/blocks/_button.scss
+++ b/source/style/blocks/_button.scss
@@ -2,6 +2,9 @@
     min-width: 200px;
     padding: 18px 25px;
     color: #ffffff;
+    font-family: 'Work Sans', Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
     text-transform: uppercase;
     text-align: center;
     background-color: #252525;
