--- a/source/style/style.css
+++ b/source/style/style.css
@@ -389,6 +389,9 @@ img {
   min-width: 200px;
   padding: 18px 25px;
   color: #ffffff;
+  font-family: 'Work Sans', Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
   text-transform: uppercase;
   text-align: center;
   background-color: #252525;
@@ -475,6 +478,7 @@ img {
 .main__title {
   margin-bottom: 50px;
   font-size: 51px;
+  line-height: 1.18;
 }
 
 .main__title--italic {
@@ -876,5 +880,150 @@ img {
 .blog-post__text {
   color: #5f5f5f;
   font-size: 15px;
+}
+
+.contacts {
+  padding: 100px 0;
+  background-color: #f6f6f6;
+}
+
+.contacts__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.contacts__info {
+  -ms-flex-preferred-size: calc((100% / 12 * 5) - (0px * 2));
+      flex-basis: calc((100% / 12 * 5) - (0px * 2));
+  max-width: calc((100% / 12 * 5) - (0px * 2));
+  margin-right: 0px;
+  margin-left: 0px;
+  padding: 30px 15px 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.contacts__title {
+  text-align: left;
+}
+
+.contacts__desc {
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+.contacts__list {
+  color: #5f5f5f;
+  list-style: none;
+}
+
+.contacts__item {
+  margin-bottom: 10px;
+}
+
+.contacts__data-title {
+  color: #171717;
+  font-weight: bold;
+}
+
+.contacts__link {
+  color: inherit;
+  text-decoration: none;
+  -webkit-transition: color 0.2s linear;
+  transition: color 0.2s linear;
+}
+
+.contacts__link:hover {
+  color: #0e0e0e;
+}
+
+.contacts__form {
+  -ms-flex-preferred-size: calc((100% / 12 * 7) - (0px * 2));
+      flex-basis: calc((100% / 12 * 7) - (0px * 2));
+  max-width: calc((100% / 12 * 7) - (0px * 2));
+  margin-right: 0px;
+  margin-left: 0px;
+  padding: 30px 15px 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.contacts-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.contacts-form__input {
+  display: block;
+  width: 100%;
+  margin-bottom: 30px;
+  padding: 16px 22px;
+  font-family: inherit;
+  font-size: 14px;
+  border: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.contacts-form__name, .contacts-form__email {
+  width: calc(50% - 15px);
+}
+
+.contacts-form__name {
+  margin-right: 30px;
+}
+
+.contacts-form__comment {
+  resize: vertical;
+}
+
+.contacts-form__button {
+  min-width: auto;
+}
+
+@media screen and (max-width: 1023px) {
+  .contacts__info {
+    -ms-flex-preferred-size: calc((100% / 12 * 6) - (0px * 2));
+        flex-basis: calc((100% / 12 * 6) - (0px * 2));
+    max-width: calc((100% / 12 * 6) - (0px * 2));
+    margin-right: 0px;
+    margin-left: 0px;
+  }
+  .contacts__form {
+    -ms-flex-preferred-size: calc((100% / 12 * 6) - (0px * 2));
+        flex-basis: calc((100% / 12 * 6) - (0px * 2));
+    max-width: calc((100% / 12 * 6) - (0px * 2));
+    margin-right: 0px;
+    margin-left: 0px;
+  }
+  .contacts-form__name, .contacts-form__email {
+    width: 100%;
+  }
+  .contacts-form__name {
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .contacts__info {
+    -ms-flex-preferred-size: calc((100% / 12 * 12) - (0px * 2));
+        flex-basis: calc((100% / 12 * 12) - (0px * 2));
+    max-width: calc((100% / 12 * 12) - (0px * 2));
+    margin-right: 0px;
+    margin-left: 0px;
+  }
+  .contacts__form {
+    -ms-flex-preferred-size: calc((100% / 12 * 12) - (0px * 2));
+        flex-basis: calc((100% / 12 * 12) - (0px * 2));
+    max-width: calc((100% / 12 * 12) - (0px * 2));
+    margin-right: 0px;
+    margin-left: 0px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
