added footer section

--- a/source/template/footer.html
+++ b/source/template/footer.html
@@ -1,5 +1,34 @@
-<footer class="main-footer">
+<footer class="footer">
     <div class="container">
+
+        <div class="footer__social social">
+            <ul class="social__list">
+                <li class="social__item">
+                    <a href="https://twitter.com" class="social__link" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+                <li class="social__item">
+                    <a href="https://www.facebook.com" class="social__link" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                </li>
+                <li class="social__item">
+                    <a href="https://dribbble.com" class="social__link" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-dribbble"></i>
+                    </a>
+                </li>
+                <li class="social__item">
+                    <a href="https://www.instagram.com" class="social__link" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        
+        <div class="footer__text">
+            <p>2016-2019 © Design by Unvab. Code by Kadonomaro</p>
+        </div>
 
     </div><!--container-->
 </footer>
