--- a/source/style/style.css
+++ b/source/style/style.css
@@ -405,6 +405,33 @@ img {
   background-color: #444444;
 }
 
+.social__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style: none;
+}
+
+.social__item {
+  padding: 3px 6px;
+}
+
+.social__link {
+  display: block;
+  font-size: 16px;
+  color: inherit;
+  opacity: 0.4;
+  -webkit-transition: opacity 0.4s ease-in;
+  transition: opacity 0.4s ease-in;
+}
+
+.social__link:hover {
+  opacity: 1;
+}
+
 .main-header {
   position: fixed;
   z-index: 9;
@@ -1025,5 +1052,21 @@ img {
     margin-right: 0px;
     margin-left: 0px;
   }
+}
+
+.footer {
+  padding: 45px 0 25px;
+  background-color: #ebebeb;
+}
+
+.footer__social {
+  margin-bottom: 12px;
+}
+
+.footer__text {
+  margin-bottom: 20px;
+  color: #5f5f5f;
+  font-size: 14px;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
