--- a/source/style/style.scss
+++ b/source/style/style.scss
@@ -8,6 +8,7 @@
 
 @import 'blocks/logo';
 @import 'blocks/button';
+@import 'blocks/social';
 
 @import 'main';
 @import 'about';
@@ -17,5 +18,6 @@
 @import 'partners';
 @import 'blog';
 @import 'contacts';
+@import 'footer';
 // @import '';
 
