--- a/source/template/footer.html
+++ b/source/template/footer.html
@@ -10,7 +10,7 @@
                 </li>
                 <li class="social__item">
                     <a href="https://www.facebook.com" class="social__link" target="_blank" rel="noopener noreferrer">
-                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-facebook-f"></i>
                     </a>
                 </li>
                 <li class="social__item">
@@ -27,7 +27,7 @@
         </div>
         
         <div class="footer__text">
-            <p>2016-2019 © Design by Unvab. Code by Kadonomaro</p>
+            <p>2016-2019 © Design by Unvab. Code by <a class="footer__link" href="https://github.com/kadonomaro" target="_blank" rel="noopener noreferrer">Kadonomaro</a></p>
         </div>
 
     </div><!--container-->
