--- a/source/style/_footer.scss
+++ b/source/style/_footer.scss
@@ -10,4 +10,12 @@
         font-size: 14px;
         text-align: center;
     }
+    &__link {
+        color: inherit;
+        text-decoration: none;
+        transition: color 0.2s ease-in;
+        &:hover {
+            color: #0e0e0e;
+        }
+    }
 }
