--- a/source/style/style.css
+++ b/source/style/style.css
@@ -386,7 +386,6 @@ img {
 }
 
 .button {
-  min-width: 200px;
   padding: 18px 25px;
   color: #ffffff;
   font-family: 'Work Sans', Arial, Helvetica, sans-serif;
@@ -424,11 +423,13 @@ img {
   font-size: 16px;
   color: inherit;
   opacity: 0.4;
-  -webkit-transition: opacity 0.4s ease-in;
-  transition: opacity 0.4s ease-in;
+  -webkit-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
 }
 
 .social__link:hover {
+  -webkit-transform: translateY(-2px);
+          transform: translateY(-2px);
   opacity: 1;
 }
 
@@ -522,6 +523,10 @@ img {
   font-weight: bold;
   letter-spacing: 2.8px;
   text-transform: uppercase;
+}
+
+.main__button {
+  min-width: 200px;
 }
 
 .about {
@@ -1010,10 +1015,6 @@ img {
   resize: vertical;
 }
 
-.contacts-form__button {
-  min-width: auto;
-}
-
 @media screen and (max-width: 1023px) {
   .contacts__info {
     -ms-flex-preferred-size: calc((100% / 12 * 6) - (0px * 2));
@@ -1068,5 +1069,16 @@ img {
   color: #5f5f5f;
   font-size: 14px;
   text-align: center;
+}
+
+.footer__link {
+  color: inherit;
+  text-decoration: none;
+  -webkit-transition: color 0.2s ease-in;
+  transition: color 0.2s ease-in;
+}
+
+.footer__link:hover {
+  color: #0e0e0e;
 }
 /*# sourceMappingURL=style.css.map */
