--- a/source/style/_main.scss
+++ b/source/style/_main.scss
@@ -29,6 +29,9 @@
         text-transform: uppercase;
         text-decoration: none;
     }
+    &__social {
+        display: none;
+    }
 }
 
 .main {
@@ -74,5 +77,43 @@
     }
     &__button {
         min-width: 200px;
+    }
+}
+
+
+@include media(600) {
+    .main-header {
+        .logo {
+            padding: 20px 0;
+        }
+    }
+    .main-nav {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba($color: #303030, $alpha: 0.95);
+        transform: translateX(-100%);
+        transition: transform 0.5s ease-in;
+        &__list {
+            flex-wrap: wrap;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: auto;
+        }
+        &__item {
+            margin: 25px 0;
+        }
+        &__social {
+            display: block;
+        }
+    }
+    .main-nav--active {
+        transform: translateX(0);
     }
 }
