--- a/source/template/header.html
+++ b/source/template/header.html
@@ -18,6 +18,34 @@
                     <li class="main-nav__item"><a href="#" class="main-nav__link">portfolio</a></li>
                     <li class="main-nav__item"><a href="#" class="main-nav__link">blog</a></li>
                 </ul>
+
+                <div class="main-nav__social">
+                    <div class="social social--light">
+                        <ul class="social__list">
+                            <li class="social__item">
+                                <a href="https://twitter.com" class="social__link" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li class="social__item">
+                                <a href="https://www.facebook.com" class="social__link" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                            </li>
+                            <li class="social__item">
+                                <a href="https://dribbble.com" class="social__link" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-dribbble"></i>
+                                </a>
+                            </li>
+                            <li class="social__item">
+                                <a href="https://www.instagram.com" class="social__link" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
             </nav>
 
         </div>
