added toggle button for menu

--- a/source/template/header.html
+++ b/source/template/header.html
@@ -11,7 +11,14 @@
                 </div>
             </div>
 
+            <div class="main-nav-toggle js-menu-toggle">
+                <div class="main-nav-toggle__line"></div>
+                <div class="main-nav-toggle__line"></div>
+                <div class="main-nav-toggle__line"></div>
+            </div>
+
             <nav class="main-header__nav main-nav">
+
                 <ul class="main-nav__list">
                     <li class="main-nav__item"><a href="#" class="main-nav__link">about</a></li>
                     <li class="main-nav__item"><a href="#" class="main-nav__link">contact</a></li>
@@ -43,7 +50,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </div>
+                    </div><!--social-->
                 </div>
 
             </nav>
