--- a/source/style/_main.scss
+++ b/source/style/_main.scss
@@ -15,6 +15,7 @@
 
 }
 
+
 .main-nav {
     padding: 33px 0;
     &__list {
@@ -33,6 +34,43 @@
         display: none;
     }
 }
+
+
+.main-nav-toggle {
+    position: fixed;
+    z-index: 9;
+    top: 20px;
+    right: 20px;
+    width: 40px;
+    display: none;
+    border-radius: 5px;
+    overflow: hidden;
+    cursor: pointer;
+    &__line {
+        width: 100%;
+        height: 5px;
+        background-color: #fff;
+        transform-origin: center;
+        transition: transform 0.3s linear, opacity 0.2s linear;
+    }
+    &__line:not(:last-child) {
+        margin-bottom: 10px;
+    }
+}
+.main-nav-toggle--active {
+    .main-nav-toggle__line {
+        opacity: 0;
+    }
+    .main-nav-toggle__line:first-child {
+        transform: translateY(15px) rotate(45deg);
+        opacity: 1;
+    }
+    .main-nav-toggle__line:last-child {
+        transform: translateY(-15px) rotate(-45deg);
+        opacity: 1;
+    }
+}
+
 
 .main {
     position: relative;
@@ -81,11 +119,15 @@
 }
 
 
+/*****MEDIA QUERIES*****/
 @include media(600) {
     .main-header {
         .logo {
             padding: 20px 0;
         }
+    }
+    .main-nav-toggle {
+        display: block;
     }
     .main-nav {
         position: fixed;
