--- a/source/style/style.css
+++ b/source/style/style.css
@@ -488,6 +488,50 @@ img {
   display: none;
 }
 
+.main-nav-toggle {
+  position: fixed;
+  z-index: 9;
+  top: 20px;
+  right: 20px;
+  width: 40px;
+  display: none;
+  border-radius: 5px;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.main-nav-toggle__line {
+  width: 100%;
+  height: 5px;
+  background-color: #fff;
+  -webkit-transform-origin: center;
+          transform-origin: center;
+  -webkit-transition: opacity 0.2s linear, -webkit-transform 0.3s linear;
+  transition: opacity 0.2s linear, -webkit-transform 0.3s linear;
+  transition: transform 0.3s linear, opacity 0.2s linear;
+  transition: transform 0.3s linear, opacity 0.2s linear, -webkit-transform 0.3s linear;
+}
+
+.main-nav-toggle__line:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.main-nav-toggle--active .main-nav-toggle__line {
+  opacity: 0;
+}
+
+.main-nav-toggle--active .main-nav-toggle__line:first-child {
+  -webkit-transform: translateY(15px) rotate(45deg);
+          transform: translateY(15px) rotate(45deg);
+  opacity: 1;
+}
+
+.main-nav-toggle--active .main-nav-toggle__line:last-child {
+  -webkit-transform: translateY(-15px) rotate(-45deg);
+          transform: translateY(-15px) rotate(-45deg);
+  opacity: 1;
+}
+
 .main {
   position: relative;
   height: 100vh;
@@ -541,9 +585,13 @@ img {
   min-width: 200px;
 }
 
+/*****MEDIA QUERIES*****/
 @media screen and (max-width: 600px) {
   .main-header .logo {
     padding: 20px 0;
+  }
+  .main-nav-toggle {
+    display: block;
   }
   .main-nav {
     position: fixed;
