--- a/source/style/_footer.scss
+++ b/source/style/_footer.scss
@@ -19,3 +19,13 @@
         }
     }
 }
+
+
+@include media(600) {
+    .footer {
+        padding: 20px 0;
+        &__text {
+            margin-bottom: 0;
+        }
+    }
+}
