--- a/source/style/_blog.scss
+++ b/source/style/_blog.scss
@@ -1,5 +1,3 @@
-$slick-dot-color: #333;
-
 .blog {
     padding: 80px 0 100px;
     background-color: #fafafa;
@@ -69,3 +67,10 @@ $slick-dot-color: #333;
     }
 }
 
+
+
+@include media(600) {
+    .blog {
+        padding: 30px 0;
+    }
+}
