--- a/source/style/style.css
+++ b/source/style/style.css
@@ -445,6 +445,7 @@ img {
   position: fixed;
   z-index: 9;
   width: 100%;
+  color: #bfbfbf;
   font-family: 'Work Sans', Arial, Helvetica, sans-serif;
   font-size: 14px;
   font-weight: 500;
@@ -463,6 +464,11 @@ img {
   margin-right: auto;
 }
 
+.main-header--white {
+  color: #303030;
+  background-color: #fff;
+}
+
 .main-nav {
   padding: 33px 0;
 }
@@ -479,7 +485,7 @@ img {
 }
 
 .main-nav__link {
-  color: #bfbfbf;
+  color: inherit;
   text-transform: uppercase;
   text-decoration: none;
 }
@@ -587,6 +593,12 @@ img {
 
 /*****MEDIA QUERIES*****/
 @media screen and (max-width: 600px) {
+  .main {
+    padding-top: 80px;
+  }
+  .main__title {
+    font-size: 40px;
+  }
   .main-header .logo {
     padding: 20px 0;
   }
@@ -635,6 +647,9 @@ img {
   .main-nav__item {
     margin: 25px 0;
   }
+  .main-nav__link {
+    color: #bfbfbf;
+  }
   .main-nav__social {
     display: block;
   }
@@ -660,6 +675,12 @@ img {
 
 .about__img {
   display: inline-block;
+}
+
+@media screen and (max-width: 600px) {
+  .about {
+    padding: 30px 0;
+  }
 }
 
 .features {
@@ -881,7 +902,10 @@ img {
   }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 600px) {
+  .projects {
+    padding: 30px 0;
+  }
   .projects__item {
     -ms-flex-preferred-size: calc((100% / 12 * 12) - (0px * 2));
         flex-basis: calc((100% / 12 * 12) - (0px * 2));
@@ -1029,6 +1053,12 @@ img {
   font-size: 15px;
 }
 
+@media screen and (max-width: 600px) {
+  .blog {
+    padding: 30px 0;
+  }
+}
+
 .contacts {
   padding: 100px 0;
   background-color: #f6f6f6;
@@ -1154,6 +1184,9 @@ img {
 }
 
 @media screen and (max-width: 600px) {
+  .contacts {
+    padding: 30px 0;
+  }
   .contacts__info {
     -ms-flex-preferred-size: calc((100% / 12 * 12) - (0px * 2));
         flex-basis: calc((100% / 12 * 12) - (0px * 2));
@@ -1167,6 +1200,9 @@ img {
     max-width: calc((100% / 12 * 12) - (0px * 2));
     margin-right: 0px;
     margin-left: 0px;
+  }
+  .contacts-form__button {
+    width: 100%;
   }
 }
 
@@ -1195,5 +1231,14 @@ img {
 
 .footer__link:hover {
   color: #0e0e0e;
+}
+
+@media screen and (max-width: 600px) {
+  .footer {
+    padding: 20px 0;
+  }
+  .footer__text {
+    margin-bottom: 0;
+  }
 }
 /*# sourceMappingURL=style.css.map */
