--- a/source/style/_partners.scss
+++ b/source/style/_partners.scss
@@ -7,3 +7,12 @@
         box-sizing: border-box;
     }
 }
+
+
+@include media(600) {
+    .partners {
+        &__item {
+            padding: 5px;
+        }
+    }
+}
