--- a/source/style/_reviews.scss
+++ b/source/style/_reviews.scss
@@ -39,3 +39,15 @@
         text-transform: uppercase;
     }
 }
+
+
+@include media(600) {
+    .reviews {
+        padding: 30px 0;
+    }
+
+    .review {
+        margin-bottom: 20px;
+        font-size: 20px;
+    }
+}
