--- a/source/template/header.html
+++ b/source/template/header.html
@@ -19,9 +19,9 @@
             <nav class="main-header__nav main-nav">
 
                 <ul class="main-nav__list">
-                    <li class="main-nav__item"><a href="#" class="main-nav__link">about</a></li>
-                    <li class="main-nav__item"><a href="#" class="main-nav__link">contact</a></li>
-                    <li class="main-nav__item"><a href="#" class="main-nav__link">portfolio</a></li>
+                    <li class="main-nav__item"><a href="index.html#about" class="main-nav__link">about</a></li>
+                    <li class="main-nav__item"><a href="index.html#contacts" class="main-nav__link">contact</a></li>
+                    <li class="main-nav__item"><a href="portfolio.html" class="main-nav__link">portfolio</a></li>
                     <li class="main-nav__item"><a href="#" class="main-nav__link">blog</a></li>
                 </ul>
 
