--- a/source/style/_projects.scss
+++ b/source/style/_projects.scss
@@ -1,5 +1,10 @@
 .projects {
     padding: 80px 0;
+    &__filter {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
     &__list {
         display: flex;
         flex-wrap: wrap;
@@ -9,6 +14,17 @@
         flex-grow: 1;
         min-width: 280px;
     }
+}
+.projects--gray {
+    padding: 120px 0 80px;
+    background-color: #f6f6f6;
+}
+
+
+.projects-filter {
+    width: 16px;
+    height: 16px;
+    background-color: #eaeaea;
 }
 
 
