--- a/source/style/common/_common.scss
+++ b/source/style/common/_common.scss
@@ -4,6 +4,11 @@ body, h1, h2, h3, h4, h5, h6, p, ul, form, blockquote {
 }
 
 
+html {
+    scroll-behavior: smooth;
+}
+
+
 img {
     display: block;
     max-width: 100%;
