--- a/source/style/_projects.scss
+++ b/source/style/_projects.scss
@@ -3,7 +3,7 @@
     &__filter {
         display: flex;
         justify-content: center;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
     }
     &__list {
         display: flex;
@@ -22,9 +22,25 @@
 
 
 .projects-filter {
-    width: 16px;
-    height: 16px;
-    background-color: #eaeaea;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &__toggle {
+        width: 16px;
+        height: 16px;
+        margin-bottom: 20px;
+        background-color: #eaeaea;
+    }
+    &__list {
+        display: flex;
+        font-size: 12px;
+        list-style: none;
+    }
+    &__item {
+        padding: 0px 17px;
+        text-transform: uppercase;
+        cursor: pointer;
+    }
 }
 
 
