added scroll based header style

--- a/source/style/_main.scss
+++ b/source/style/_main.scss
@@ -39,6 +39,10 @@
         color: inherit;
         text-transform: uppercase;
         text-decoration: none;
+        transition: color 0.2s ease-in;
+        &:hover {
+            color: #ffffff;
+        }
     }
     &__social {
         display: none;
