--- a/source/style/_projects.scss
+++ b/source/style/_projects.scss
@@ -1,8 +1,8 @@
 .projects {
     padding: 80px 0;
     &__filter {
-        display: flex;
-        justify-content: center;
+        // display: flex;
+        // justify-content: center;
         margin-bottom: 30px;
     }
     &__list {
@@ -38,8 +38,13 @@
     }
     &__item {
         padding: 0px 17px;
+        color: #5f5f5f;
         text-transform: uppercase;
         cursor: pointer;
+        transition: color 0.3s ease-in;
+        &:hover {
+            color: #000000;
+        }
     }
 }
 
