--- a/source/style/_main.scss
+++ b/source/style/_main.scss
@@ -1,8 +1,13 @@
+
+$link-color--hover: #000000;
+$link-color-light: #bfbfbf;
+$link-color-light--hover: #ffffff;
+
 .main-header {
     position: fixed;
     z-index: 9;
     width: 100%;
-    color: #bfbfbf;
+    color: $link-color-light;
     font-family: 'Work Sans', Arial, Helvetica, sans-serif;
     font-size: 14px;
     font-weight: 500;
@@ -16,7 +21,7 @@
     }
 }
 .main-header--light {
-    color: #303030;
+    color: $link-color-light;
     background-color: #fff;
     .main-nav-toggle {
         &__line {
@@ -41,11 +46,18 @@
         text-decoration: none;
         transition: color 0.2s ease-in;
         &:hover {
-            color: #ffffff;
+            color: $link-color-light--hover;
         }
     }
     &__social {
         display: none;
+    }
+}
+.main-nav--light {
+    .main-nav__link {
+        &:hover {
+            color: #000000;
+        }
     }
 }
 
