--- a/source/style/_projects.scss
+++ b/source/style/_projects.scss
@@ -34,6 +34,7 @@
     &__list {
         display: flex;
         font-size: 12px;
+        font-weight: 500;
         list-style: none;
     }
     &__item {
