--- a/source/style/style.css
+++ b/source/style/style.css
@@ -473,7 +473,7 @@ img {
 }
 
 .main-header--light {
-  color: #303030;
+  color: #bfbfbf;
   background-color: #fff;
 }
 
@@ -510,6 +510,10 @@ img {
 
 .main-nav__social {
   display: none;
+}
+
+.main-nav--light .main-nav__link:hover {
+  color: #000000;
 }
 
 .main-nav-toggle {
@@ -786,11 +790,16 @@ img {
     max-width: calc((100% / 12 * 6) - (0px * 2));
     margin-right: 0px;
     margin-left: 0px;
+  }
+  .features__item:not(:last-child) {
     margin-bottom: 20px;
   }
 }
 
 @media screen and (max-width: 600px) {
+  .features {
+    padding: 30px 0;
+  }
   .features__item {
     -ms-flex-preferred-size: calc((100% / 12 * 12) - (0px * 2));
         flex-basis: calc((100% / 12 * 12) - (0px * 2));
@@ -862,6 +871,7 @@ img {
   display: -ms-flexbox;
   display: flex;
   font-size: 12px;
+  font-weight: 500;
   list-style: none;
 }
 
