--- a/source/style/_projects.scss
+++ b/source/style/_projects.scss
@@ -30,6 +30,7 @@
         height: 16px;
         margin-bottom: 20px;
         background-color: #eaeaea;
+        cursor: pointer;
     }
     &__list {
         display: flex;
@@ -125,4 +126,39 @@
             @include flex-columns(12);
         }
     }
+    .projects--gray {
+        padding-top: 80px;
+    }
+    .projects-filter {
+        &__list {
+            flex-wrap: wrap;
+            margin: 0 -5px;
+        }
+        &__item {
+            position: relative;
+            flex: 1 1 45%;
+            margin: 5px;
+            padding: 8px 12px;
+            text-align: center;
+            border: 1px solid #6f6f6f;
+            background-color: transparent;
+            box-sizing: border-box;
+            &:hover::before {
+                width: 100%;
+            }
+            &::before {
+                position: absolute;
+                // z-index: -1;
+                content: '';
+                top: 0;
+                left: 0;
+                width: 0;
+                height: 100%;
+                background-color: #5f5f5f;
+                transition: width 0.3s ease-in;
+                opacity: 0.5;
+            }
+        }
+    }
+
 }
