--- a/source/style/style.css
+++ b/source/style/style.css
@@ -864,6 +864,7 @@ img {
   height: 16px;
   margin-bottom: 20px;
   background-color: #eaeaea;
+  cursor: pointer;
 }
 
 .projects-filter__list {
@@ -990,6 +991,42 @@ img {
     max-width: calc((100% / 12 * 12) - (0px * 2));
     margin-right: 0px;
     margin-left: 0px;
+  }
+  .projects--gray {
+    padding-top: 80px;
+  }
+  .projects-filter__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: 0 -5px;
+  }
+  .projects-filter__item {
+    position: relative;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 45%;
+            flex: 1 1 45%;
+    margin: 5px;
+    padding: 8px 12px;
+    text-align: center;
+    border: 1px solid #6f6f6f;
+    background-color: transparent;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  .projects-filter__item:hover::before {
+    width: 100%;
+  }
+  .projects-filter__item::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: #5f5f5f;
+    -webkit-transition: width 0.3s ease-in;
+    transition: width 0.3s ease-in;
+    opacity: 0.5;
   }
 }
 
