--- a/source/style/common/_common.scss
+++ b/source/style/common/_common.scss
@@ -5,6 +5,7 @@ body, h1, h2, h3, h4, h5, h6, p, ul, form, blockquote {
 
 
 html {
+    height: 100%;
     scroll-behavior: smooth;
 }
 
@@ -17,6 +18,9 @@ img {
 
 .page {
     width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     font-family: 'Work Sans', Arial, Helvetica, sans-serif;
     line-height: 1.65;
 }
