--- a/source/style/style.css
+++ b/source/style/style.css
@@ -5,6 +5,7 @@ body, h1, h2, h3, h4, h5, h6, p, ul, form, blockquote {
 }
 
 html {
+  height: 100%;
   scroll-behavior: smooth;
 }
 
@@ -15,6 +16,14 @@ img {
 
 .page {
   width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   font-family: 'Work Sans', Arial, Helvetica, sans-serif;
   line-height: 1.65;
 }
@@ -842,6 +851,9 @@ img {
 }
 
 .projects--gray {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 120px 0 80px;
   background-color: #f6f6f6;
 }
